Some visual changes to rooms and joinedRoom stages